--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-is": "^19.2.0",
     "react-responsive": "^10.0.1",
     "recharts": "^3.2.1",
     "sonner": "^2.0.7",
@@ -41,11 +42,13 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "24.8.1",
     "@types/react": "19.2.2",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "tailwindcss": "^4",
-    "tw-animate-css": "^1.4.0"
+    "tw-animate-css": "^1.4.0",
+    "typescript": "5.9.3"
   }
 }
