--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "react-responsive": "^10.0.1",
     "recharts": "^3.2.1",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^3.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
